♻️ refactor LocalUserDataPurger,PathValidator, checkstyle-suppressions.xml, requirements.txt, FileSystemManager, IUserDataPurger, IOsFolder, OsFolderInitializer, FileChooserService, CrashScreenView, SplashScreenView, HelpViewModel, MenuOptionsViewModel, GridViewModel, FileSystemManagerUTest : Centralize path validation and modernize data purge logic - Created PathValidator enum to centralize fail-fast validation for existence and directory status. - Renamed IFileSystem to IUserDataPurger and replaced FileSystemManager with LocalUserDataPurger. - Refactored multiple ViewModels and Services to use PathValidator and java.nio.path instead of manual File existence checks. - Improved CrashScreenView to validate authorized data scope before recursive deletion. - Updated HelpViewModel to handle log file button visibility via specific exception catching (IllegalStateException, IllegalArgumentException) with TRACE logging. - Hardened FileChooserService and OsFolderInitializer by enforcing directory validation through PathValidator. - Updated requirements.txt dependencies: filelock (3.24.3), platformdirs (4.9.2), virtualenv (20.38.0). - Adjusted checkstyle-suppressions.xml for MyRegex and updated line mappings for SplashScreen/CrashScreen views. - Refactored FileSystemManagerUTest into LocalUserDataPurger tests with enhanced log monitoring via logWatcher. - Tests pass.